--- a/lamp/composer.json
+++ b/lamp/composer.json
@@ -1,5 +1,9 @@
 {
+    "require": {
+        "php": "^7.3",
+        "ext-mysqli": "*"
+    },
     "require-dev": {
-        "phpunit/phpunit": "^9."
+        "phpunit/phpunit": "^9"
     }
 }
