--- a/mern/client/fakeid/package.json
+++ b/mern/client/fakeid/package.json
@@ -2,6 +2,10 @@
   "name": "fakeid",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "^6.9",
+    "node": "^10"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
