--- a/mean/client/fakeid/package.json
+++ b/mean/client/fakeid/package.json
@@ -1,19 +1,27 @@
 {
   "name": "fakeid",
   "version": "0.0.0",
+  "engines": {
+    "node": "14.15.0",
+    "npm": "6.14.8"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.0",
+    "@angular-devkit/build-angular": "^0.1100.1",
+    "@angular/cli": "^11.0.1",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
+    "@angular/compiler-cli": "~11.0.0",
     "@angular/core": "~11.0.0",
     "@angular/forms": "~11.0.0",
     "@angular/platform-browser": "~11.0.0",
@@ -21,12 +29,11 @@
     "@angular/router": "~11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.0",
-    "@angular/cli": "~11.0.0",
-    "@angular/compiler-cli": "~11.0.0",
+    "@angular-devkit/build-angular": "^0.1100.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
