--- a/mean/client/fakeid/package.json
+++ b/mean/client/fakeid/package.json
@@ -17,7 +17,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.0",
-    "@angular-devkit/build-angular": "^0.1100.1",
     "@angular/cli": "^11.0.1",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
@@ -27,6 +26,7 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "typescript": "~4.0.2",
