--- a/lamp/composer.json
+++ b/lamp/composer.json
@@ -4,6 +4,6 @@
         "ext-mysqli": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9."
     }
 }
