--- a/lamp/composer.json
+++ b/lamp/composer.json
@@ -1,9 +1,12 @@
 {
-    "require": {
-        "php": "^7.3",
-        "ext-mysqli": "*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9."
-    }
+  "name": "lamp/lamp",
+  "description": "lamp",
+  "require": {
+    "php": "^7.3",
+    "ext-mysqli": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.",
+    "phpunit/php-code-coverage": "^9.2"
+  }
 }
