code coverage config and report

--- a/lamp/package.json
+++ b/lamp/package.json
@@ -14,5 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^5.6.0"
+  },
+  "dependencies": {
+    "php-parser": "^3.0.2"
   }
 }
