--- a/lamp/composer.json
+++ b/lamp/composer.json
@@ -3,7 +3,8 @@
   "description": "lamp",
   "require": {
     "php": "^7.3",
-    "ext-mysqli": "*"
+    "ext-mysqli": "*",
+    "nikic/php-parser": "^4.10"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.",
