--- a/lamp/composer.json
+++ b/lamp/composer.json
@@ -4,7 +4,8 @@
   "require": {
     "php": "^7.3",
     "ext-mysqli": "*",
-    "nikic/php-parser": "^4.10"
+    "nikic/php-parser": "^4.10",
+    "guzzlehttp/guzzle": "^7.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.",
