--- a/lamp/composer.json
+++ b/lamp/composer.json
@@ -4,8 +4,7 @@
   "require": {
     "php": "^7.3",
     "ext-mysqli": "*",
-    "nikic/php-parser": "^4.10",
-    "guzzlehttp/guzzle": "^7.2"
+    "nikic/php-parser": "^4.10"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.",
