--- a/mern/client/fakeid/.gitignore
+++ b/mern/client/fakeid/.gitignore
@@ -22,7 +22,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-cypress/fixtures
-cypress/plugins
+cypress/fixtures/
+cypress/plugins/
 cypress/support/
-cypress/integration/examples
+cypress/integration/examples/
