--- a/mern/server/package.json
+++ b/mern/server/package.json
@@ -22,5 +22,9 @@
     "@types/jest": "^26.0.16",
     "jest": "^26.6.3",
     "mongodb-memory-server": "^6.9.2"
+  },
+  "jest": {
+    "collectCoverage": true,
+     "coverageReporters": ["json", "html"]
   }
 }
