age calculation, status functions and tests

--- a/mern/server/package.json
+++ b/mern/server/package.json
@@ -25,6 +25,9 @@
   },
   "jest": {
     "collectCoverage": true,
-     "coverageReporters": ["json", "html"]
+    "coverageReporters": [
+      "json",
+      "html"
+    ]
   }
 }
