all users and e2e test

--- a/mean/client/fakeid/.gitignore
+++ b/mean/client/fakeid/.gitignore
@@ -44,3 +44,9 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+
+cypress/fixtures
+cypress/plugins
+cypress/support/
+cypress/integration/examples
