--- a/mean/client/fakeid/package.json
+++ b/mean/client/fakeid/package.json
@@ -13,18 +13,19 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build --prod",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.0",
     "@angular/cdk": "^11.0.3",
-    "@angular/cli": "^11.0.1",
+    "@angular/cli": "^11.0.5",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
     "@angular/compiler-cli": "~11.0.0",
     "@angular/core": "~11.0.0",
-    "@angular/forms": "~11.0.0",
+    "@angular/forms": "^11.0.5",
     "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
