--- a/mean/client/fakeid/package.json
+++ b/mean/client/fakeid/package.json
@@ -27,11 +27,13 @@
     "@angular/core": "~11.0.0",
     "@angular/forms": "^11.0.5",
     "@angular/material": "^11.0.3",
+    "@angular/material-moment-adapter": "^11.0.3",
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
     "cypress": "^6.1.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "typescript": "~4.0.2",
