--- a/mean/client/fakeid/angular.json
+++ b/mean/client/fakeid/angular.json
@@ -64,10 +64,9 @@
           }
         },
         "serve": {
-          "builder": "ngx-build-plus:dev-server",
+          "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "fakeid:build",
-            "extraWebpackConfig": "./cypress/coverage.webpack.js"
+            "browserTarget": "fakeid:build"
           },
           "configurations": {
             "production": {
@@ -117,13 +116,13 @@
         "e2e": {
           "builder": "@briebug/cypress-schematic:cypress",
           "options": {
-            "devServerTarget": "fakeid:serve",
+            "devServerTarget": "fakeid:serve-coverage",
             "watch": true,
             "headless": false
           },
           "configurations": {
             "production": {
-              "devServerTarget": "fakeid:serve:production"
+              "devServerTarget": "fakeid:serve-coverage:production"
             }
           }
         },
