--- a/mean/client/fakeid/package.json
+++ b/mean/client/fakeid/package.json
@@ -14,6 +14,7 @@
     "e2e": "ng e2e",
     "e2e:ci": "ng run fakeid:e2e-ci",
     "e2e:coverage": "npx nyc report --reporter=lcov --reporter=text-summary",
+    "e2e:ci:coverage": "npm run e2e:ci && npm run e2e:coverage",
     "heroku-postbuild": "ng build --prod",
     "cypress": "cypress open",
     "postinstall": "ngcc"
@@ -68,7 +69,7 @@
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.19",
     "ts-loader": "8.0.12",
-    "ts-node": "^8.3.0",
+    "ts-node": "^8.10.2",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
   }
