--- a/mean/server/package.json
+++ b/mean/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "config": "^3.3.2",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "mongodb": "^3.6.3",
