--- a/mern/server/package.json
+++ b/mern/server/package.json
@@ -10,6 +10,7 @@
     "@shelf/jest-mongodb": "^1.2.3",
     "config": "^3.3.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "mongodb": "^3.6.3",
