--- a/mean/client/fakeid/cypress/tsconfig.json
+++ b/mean/client/fakeid/cypress/tsconfig.json
@@ -3,5 +3,6 @@
   "include": ["../node_modules/cypress", "**/*.ts"],
   "compilerOptions": {
     "sourceMap": false
-  }
+  },
+  "types": ["cypress"]
 }
