--- a/mean/client/fakeid/package.json
+++ b/mean/client/fakeid/package.json
@@ -21,20 +21,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.0",
+    "@angular/animations": "^11.0.5",
     "@angular/cdk": "^11.0.3",
     "@angular/cli": "^11.0.5",
-    "@angular/common": "~11.0.0",
-    "@angular/compiler": "~11.0.0",
-    "@angular/compiler-cli": "~11.0.0",
-    "@angular/core": "~11.0.0",
+    "@angular/common": "^11.0.5",
+    "@angular/compiler": "^11.0.5",
+    "@angular/compiler-cli": "^11.0.5",
+    "@angular/core": "^11.0.5",
     "@angular/forms": "^11.0.5",
     "@angular/material": "^11.0.3",
     "@angular/material-moment-adapter": "^11.0.3",
-    "@angular/platform-browser": "~11.0.0",
-    "@angular/platform-browser-dynamic": "~11.0.0",
-    "@angular/router": "~11.0.0",
-    "cypress": "^6.1.0",
+    "@angular/platform-browser": "^11.0.5",
+    "@angular/platform-browser-dynamic": "^11.0.5",
+    "@angular/router": "^11.0.5",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
@@ -47,15 +46,15 @@
     "all": true
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.1",
+    "@angular-devkit/build-angular": "^0.1100.5",
     "@briebug/cypress-schematic": "^4.4.0",
     "@cypress/code-coverage": "^3.8.8",
     "@cypress/webpack-preprocessor": "^5.5.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/jasmine": "^3.6.2",
+    "@types/node": "^12.19.12",
     "codelyzer": "^6.0.0",
-    "cypress": "6.2.0",
+    "cypress": "^6.2.1",
     "istanbul-instrumenter-loader": "^3.0.1",
     "istanbul-lib-coverage": "^3.0.0",
     "jasmine-core": "~3.6.0",
