--- a/mean/server/package.json
+++ b/mean/server/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "config": "^3.3.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
