--- a/mean/client/fakeid/tsconfig.json
+++ b/mean/client/fakeid/tsconfig.json
@@ -27,5 +27,10 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
+  },
+  "paths": {
+    "moment": [
+      "../node_modules/moment/min/moment.min.js"
+    ]
   }
 }
