--- a/mean/client/fakeid/package.json
+++ b/mean/client/fakeid/package.json
@@ -17,7 +17,8 @@
     "e2e:ci:coverage": "npm run e2e:ci && npm run e2e:coverage",
     "heroku-postbuild": "ng build --prod",
     "cypress": "cypress open",
-    "postinstall": "ngcc"
+    "postinstall": "ngcc",
+    "analyze": "ng build --prod --stats-json && webpack-bundle-analyzer dist/fakeid/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -70,6 +71,7 @@
     "ts-loader": "8.0.12",
     "ts-node": "^8.10.2",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "webpack-bundle-analyzer": "^4.3.0"
   }
 }
