--- a/mean/client/fakeid/package.json
+++ b/mean/client/fakeid/package.json
@@ -35,6 +35,7 @@
     "@angular/platform-browser": "^11.0.5",
     "@angular/platform-browser-dynamic": "^11.0.5",
     "@angular/router": "^11.0.5",
+    "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
